--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URL=mongodb+srv://om123:Aaryan123@cluster1.anbxigv.mongodb.net/QuickBite?retryWrites=true&w=majority
+LOCAL_MONGO= mongodb://127.0.0.1:27017/jewellaryApp
